--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,8 @@
 extends layout
 
 block content
-  h1= title
+  //- h1= title
+  h1 Bhaskar Local library app
   p Welcome to #[em LocalLibrary], a very basic Express website developed as a tutorial example on the Mozilla Developer Network.
 
   h1 Dynamic content
